--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio - Desenvolvimento Web 1</title>
+    <title>Portfólio - Desenvolvimento Web 1 - André Miguel</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    <p>Andrézinho gameplays</p>
+    <section class="home" id="home">
+        <p>Andrézinho gameplays</p>
+        <div class="home-content">
+            <h1>André Miguel
+                <h3>Eu sou um aluno de TADS</h3>
+                <p>lorem ipsum</p>
+            </h1>
+            <div class="social-media">
+                <a href="https://github.com/AndreMiguelP">
+                    <i class="bx bxl-github"></i>
+                </a>
+                <a href="https://github.com/AndreMiguelP">
+                    <i class="bx bxl-facebook-circle"></i> 
+                </a>
+                <a href="https://github.com/AndreMiguelP">
+                    <i class="bx bxl-linkedin-square"></i>
+                </a>
+                <a href="https://github.com/AndreMiguelP">
+                    <i class="bx bxl-instagram-alt"></i>
+                </a>  
+            </div>
+            <a href="Currículo André M.pdf" class="btn" download="Currículo André M.pdf"> Download CV</a>
+        </div>
+        <div class="home-img">
+            <img src="https://avatars.githubusercontent.com/u/210845330?v=4" alt="Foto do perfil">
+        </div>
+    </section>
+
 </body>
+
 </html>
