--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@
             <img src="https://avatars.githubusercontent.com/u/210845330?v=4" alt="Foto do perfil">
         </div>
     </section>
+    <section class="projetos" id="projetos">
+        <h2 class="titulo secao">Meus <span>Projetos</span></h2>
+
+        <div class="projetos-container">
+
+            <div class="projeto card">
+                <img src="https" alt="Imagem do Projeto 1">
+                <h3>Projeto 1: lorem ipsum</h3>
+                <p>ajgfiaojmtvjotsmrjtoças,dkgleovmpj</p>
+                <a href="#" class="btn-projeto">Ver no GitHub <i class='bx bxl-github'></i></a>
+            </div>
+
+            <div class="projeto-card">
+                <img src="https" alt="Imagem do Projeto 2">
+                <h3>Projeto 2: lorem ipsum</h3>
+                <p>ahrcnfaweravcmkflaksdfjvwm afjoipasf</p>
+                <a href="#" class="btn-projeto">Ver no GitHub <i class='bx bxl-github'></i></a>
+            </div>
+
+            <div class="projeto-card">
+                <img src="https" alt="Imagem do Projeto 3">
+                <h3>Projeto 3: lorem ipsum</h3>
+                <p>hseilvtnhdfkgvmeroijtmaoirgm la,dfmgvoar</p>
+                <a href="#" class="btn-projeto">Ver Documentação <i class='bx bx-file'></i></a>
+            </div>
+
+        </div>
+    </section>
 
 </body>
 
