--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="projeto card">
                 <img src="https" alt="Imagem do Projeto 1">
                 <h3>Projeto 1: lorem ipsum</h3>
-                <p>ajgfiaojmtvjotsmrjtoças,dkgleovmpj</p>
+                <p>ajgfiaojmtvjohjtsmrjtoças,dkgleovmpj</p>
                 <a href="#" class="btn-projeto">Ver no GitHub <i class='bx bxl-github'></i></a>
             </div>
 
