--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <img src="https" alt="Imagem do Projeto 2">
                 <h3>Projeto 2: lorem ipsum</h3>
                 <p>ahrcnfaweravcmkflaksdfjvwm afjoipasf</p>
-                <a href="#" class="btn-projeto">Ver no GitHub <i class='bx bxl-github'></i></a>
+                <a href="#" class="btn-projeto">Ver noo GitHub <i class='bx bxl-github'></i></a>
             </div>
 
             <div class="projeto-card">
