--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="home-content">
             <h1>André Miguel
                 <h3>Eu sou um aluno de TADS</h3>
-                <p>lorem ipsum</p>
+                <p>lorecfghm ipsum</p>
             </h1>
             <div class="social-media">
                 <a href="https://github.com/AndreMiguelP">
